vbnc/vbnc/tests/Errors/32083-6.vb

Class A
    Friend Sub New()

    End Sub
End Class

Class B(Of T As New)
    Sub M(ByVal z As b(Of A))
    End Sub
End Class